chromeos: Fix exo cursor crash with mash

Mash (out-of-process ash) doesn't have a CursorClient yet. We'll have
one in a few weeks as we switch to ws2 (window server as a library
built into ash), so just early exit on null.

Bug: 847557, 631103
Test: chrome --enable-features=Mash can login on device
Change-Id: I3190785c218b455652151acad213fef94e85beec
Reviewed-on: https://chromium-review.googlesource.com/1077074
Reviewed-by: David Reveman <reveman@chromium.org>
Commit-Queue: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562571}
Former-commit-id: 318d13c0410d8785315df7d3315bb8daedf63ef0